# system

./: .editorconfig  .gitconfig  .gitignore  .gitmodules  .taskrc  .xbindkeysrc  .xmobarrc  .xmobarrcbot  .xprofile  .zshenv  .zshrc  QnA.org  README.md  README.org  beets-config.yaml  bootFull.org  config.nix  default.nix  fn.sh  htoprc  init.vim  iso.nix  main.nix  nixosInstall.org  polly.org  problems.org  rb  shell.nix  startup.sh  startupSound.sh  todo  webserver.org  xmonad.hs
.irssi/: cf  config  config.autosave  default.theme  solarizedweed.theme  xchat2.theme
.ssh/: digitalocean.pub  known_hosts  mac_nixos.pub
assets/: default.nix
config/: Readme.org  default.nix  notes.org
config/modules/obswatch/: Cargo.toml  module.nix  package.nix  shell.nix
config/modules/obswatch/src/: main.rs
config/new-modules/x/wm/: stack.yaml  xmonad-config.cabal  xmonad.hs  xmonad.nix
deploy/: connectivity.nix  default.nix  do-image  iso.nix  preferred-ip  rb  rb.nix  rebuild.nix  shell.nix
emacs/: base.nix  default.nix  evil.nix  haskell.nix  module.nix  submodule.nix
guides/: polly.org  process.org
hosts/: default.nix
infinisil/: home.nix
irssi/: config  config.nix
lib/: default.nix
machines/: default.nix  dobby.nix  iso.nix
modules/: audio.nix  audioclient.nix  base.nix  beets.nix  bind.nix  ch.nix  console.nix  cuberite.nix  emacs.nix  git-host.nix  info.nix  ipfs.nix  keylayout.nix  keys.nix  localMpdServer.nix  localserver.nix  mail.nix  mpd.nix  mpdClient.nix  mpdServer.nix  namecoin.nix  network.nix  passwords.nix  radicale.nix  remote.nix  say.nix  ssh.nix  sshclient.nix  task.nix  touchpad.nix  weak.nix  web.nix  wlan.nix  x.nix  youtube.nix  znc.nix  zsh.nix
new-modules/: battery.nix  bind.nix  console.nix  default.nix  drawing.nix  git-host.nix  hosts.nix  htop.nix  ipfs.nix  java.nix  localserver.nix  main-user.nix  music.nix  openvpn.nix  rust.nix  scripts.nix  server-sync.nix  sound.nix  task.nix  test.nix  wlan.nix  youtubeDl.nix  zsh.nix
nix/: Makefile  config  config.nix  default.nix  sources.json  sources.nix
nixops/: configs.nix  default.nix  deploy.nix  digitalocean.nix  emma.nix  nepnep.nix  server.nix  yuri.nix
(+404 files in other folders)
