[package]
name = "obswatch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.80"
futures = "0.3.30"
futures-core = "0.3.30"
futures-util = "0.3.30"
nix = "0.28.0"
obws = { version = "0.11.5", features = ["events"] }
pin-utils = "0.1.0"
tokio = { version = "1.36.0", features = ["full"] }
