name:                xmonad-config
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/Infinisil/system
license:             BSD3
author:              Silvan Mosberger
maintainer:          infinisil@icloud.com
copyright:           2018 Silvan Mosberger
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable xmonad-config
  hs-source-dirs:      .
  main-is:             xmonad.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , xmonad
                     , xmonad-contrib
                     , xmonad-extras
                     , X11
                     , fuzzy
                     , containers
                     , text
